localk8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-nginx
  namespace: learningkubernetes
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
